<resources>
    <string name="app_name">S.A.W.</string>
    <string name="title_record">Record</string>
    <string name="title_map">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_record_fragment">Hello record fragment</string>
    <string name="hello_map_fragment">Hello map fragment</string>
    <string name="feels_like">Feels Like (°C):</string>
    <string name="weather_type">Weather Type:</string>
    <string name="wind_direction">Wind Direction:</string>
    <string name="wind_speed">Wind Speed (Mi/hr):</string>
    <string name="pressure">Pressure:</string>
    <string name="recorded_temp">Recorded Temp (°C):</string>
    <string name="record_instructions">Please enter the following fields:</string>
    <string name="submit">Submit Data</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="clear">Clear</string>
    <string name="feels_hints">Enter the temperature here</string>
    <string name="wind_hints">Enter the wind speed here</string>
    <string name="buttonSubmitText">Submit</string>
    <string name="buttonClearText">Clear</string>
    <string name="InputCleared">Input Cleared!</string>
    <string name="InputSent">Data Sent! Thank you!</string>
    <string name="recordTitle">Record Your Data Here!</string>
    <string name="mapTitle">Check Out the Weather Elsewhere!</string>
    <string name="welcomeTitle">Welcome!</string>
    <string name="Please_Wait">Please wait...</string>
    <string name="Processing">Processing....</string>
    <string name="AC_Successful">Account Creation Successful</string>
    <string name="Error">ERROR</string>
    <string name="No_Address">No Address returned!</string>
    <string name="Cannot_Get_Address">Cannot get Address!</string>
    <string name="Enable_Location">Please Enable Location Permissions</string>
    <string name="No_Pressure_Sensor">Device has no Pressure Sensor built-in!</string>
    <string name="Sensor_not_Found">Sensor not found.</string>
    <string name="Submission_Successful">Submission successful, you may submit again in half an hour</string>
    <string name="Can_Submit">You can submit data again</string>
    <string name="Enter_All_Feilds">Please enter all fields</string>
    <string name="SAW_Needs_You">S.A.W. Needs You! Let\'s play a game</string>
    <string name="Only_Submit">You can only submit every half an hour</string>
    <string name="email_editText">ENTER YOUR E-MAIL</string>
    <string name="passwordText">ENTER YOUR PASSWORD</string>
    <string name="username_text">USERNAME</string>
    <string name="loginButton">Login</string>
    <string name="registerButton">Register</string>
    <string name="loginText">Please login to proceed</string>
    <string name="appFullName">Something About Weather</string>
    <string name="emptyData">Please enter BOTH your email address and password!</string>
    <string name="wrongLogin">Incorrect email or password, or account not exist</string>
    <string name="wrongReg">Existing email, please use another one</string>
    <string name="notAnEmail">Please use an email address to register</string>
    <string name="inputCleared">Input cleared!</string>
</resources>
